feat: validando email do usuario
